Feat: etapa 3 - ajustes finais (Lombok @Data, testes revisados, colecao Insomnia, README)